@startuml
'https://plantuml.com/class-diagram

class LoadUnloadUI{

}

class LoadUnloadController{
+ createUS206(mmsiCode)
}


class US206 {
- initialize(mmsiCode)
+ toString()

}

class WriteForAFile{
+ writeForAFiLe(textualInformation)

}


LoadUnloadUI ..> LoadUnloadController
LoadUnloadController -> US206
US206 --> WriteForAFile : uses

@enduml